[package]
name = "thorchain-api-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio-postgres = { version = "0.7" }
axum = "0.6"
chrono = "0.4"
chrono-tz = "0.6"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "tls-rustls"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2.12"
thiserror = "1.0.64"
serde_with = "3.11.0"
